# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
2017/js/: day1.js
2018/: README.md
2018/assets/: day15_example_0.txt
2018/cpp/aoc/: CMakeLists.txt
2018/cpp/day18/: main.cpp
2018/cpp/day24/: main.cpp
2018/cpp/day25/: main.py
2018/python/: day1.py  day4.py
2018/rust/: Cargo.toml
2018/rust/src/: main.rs
2018/rust/test/: day15.sh
2019/: README.md
2019/assets/: day10-example-1  day20-example-2  day20-input  day25-replay.json
2019/python/: day1.py  day10.py  day12.py  day13.py  day14.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day6.py  day8.py  utils.py
2019/rust/: Cargo.toml  Makefile  history.txt
2019/rust/bindings/: Cargo.toml  Makefile  day15.py  intcpu.py  setup.py
2019/rust/bindings/intcpu/: __init__.py
2019/rust/bindings/src/: lib.rs
2019/rust/src/: day11.rs  day13.rs  day2.rs  day5.rs  day7.rs  day9.rs  disasm.rs  intcode.rs  lib.rs  main.rs
2019/rust/tests/: day2.sh  day5.sh  day7.sh  day9.sh
2020/: Makefile  aoc_run.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  download-input.sh  utils.py
2020/assets/: day13-example-1
2021/: day1.jl  day2.jl  day3.jl  day4.jl  day5.jl  download-input.sh  helpers.jl
2022/: package.lisp  package.test.lisp
2022-lisp/: aoc.asd  download-input.sh  package.lisp
2022-lisp/days/: 2021_day6.lisp  day1.lisp
2022-lisp/src/: utils.lisp
2022-py/: pyproject.toml
2022-py/aoc/: __init__.py  __main__.py  day0.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2022-py/assets/: day16-input-2  day20-input-ex-2
2022-zig/: assets
2022-zig/src/: day1.zig  main.zig  utils.zig
2022/days/: 2021_day6.lisp
2022/src/: utils.lisp
2022/test/: run_tests.lisp  tests.lisp
aoc/: CMakeLists.txt
aoc/include/aoc/: utils.h
assets/: day13_small_2.txt
cpp/aoc/include/: aoc.h
cpp/aoc/src/: dummy.cpp
cpp/day15/: main.cpp
cpp/day16/: main.cpp
cpp/day21/: main.cpp
cpp/day22/: main.cpp
cpp/day23/: main.hs
day1-13/: day2.py  day6.py  day7.py
day1-8/: day14.py  day3.py  day5.py
day15/: main.cpp
day16/: main.cpp
day17/: input_small_test.txt  main.cpp
day18/: main.cpp  utils.h
day19/: main.cpp
day20/: input_small_1.txt  main.cpp
day22/: main.cpp
day23/: main.cpp  stack.yaml
python/: day8.py
rust/: Cargo.toml
rust/src/: main.rs
(+8 files in other folders)
