cmake_minimum_required(VERSION 3.10)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(aoc)
add_executable(day15 day15/main.cpp)
add_executable(day16 day16/main.cpp)
add_executable(day17 day17/main.cpp)
add_executable(day18 day18/main.cpp)
target_link_libraries(day18 aoc)
add_executable(day19 day19/main.cpp)
add_executable(day20 day20/main.cpp)
target_link_libraries(day20 aoc)
add_executable(day21 day21/main.cpp)
target_link_libraries(day21 aoc)
add_executable(day22 day22/main.cpp)
target_link_libraries(day22 aoc)
add_executable(day23 day23/main.cpp)
target_link_libraries(day23 aoc)
add_executable(day24 day24/main.cpp)
target_link_libraries(day24 aoc)