[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Thomas Hiscock <thomashk000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.56.4"
numpy = "^1.23.5"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
