[package]
name = "aoc-bindings"
version = "0.1.0"
authors = ["Thomas Hiscock <thomas.hiscock@wanadoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "*"
aoc = { path = ".." }
